Version 3.2.7: Added a table feature that shows the league tables. Updated the orga-schedule to be more readable Fixed a bug where the elo-leaderboard was not ordered correctly